Fixes a bug where one dropdown in the shop header of the products overview was squished.

--- a/less/plugins.less
+++ b/less/plugins.less
@@ -302,18 +302,29 @@ a.button.button--pagination.button--next {
 .fieldset--filters {
 	.ecomproductslist__form-body {
 	    display: table;
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flexbox;
+		display: -ms-flex;
+		display: flex;
         width: 100%;
         margin: 20px -5px 0;
+		
+		@media @tablet {
+	        display: block;
+		}
     }
 	.form-group {
 	    display: table-cell;
 		width: 33.3%;
 		margin: 0;
 		padding: 0 5px;
+		
 		@media @tablet {
 	        display: block;
 			width: 100%;
 		}
+		
 		select {
 			background-size: 25px !important;
 		}
